[project]
name = "cs1920lib"
version = "0.1.0"
description = "CS 1920 OOP lab helpers and graders for Colab based exercises"
authors = [{ name = "Dania Tamayo Vera and Chris Vessey" }]
requires-python = ">=3.10"
dependencies = []

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project.urls]
Homepage = "https://github.com/dania-tamayo-vera/cs1920-oop-labs"
